# mudev_infra

./: .env.dummy  .gitattributes  .gitconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  .tflint.hcl  .tfsec.json  LICENSE  Makefile  README.md  main.py  main.tf  pyproject.toml  revive.sh
.github/workflows/: tfsec.yml
docker/: all.yaml  application.yaml  definition.yaml  infra.yaml
docker-compose/: definition.yaml  service.yaml
docker-compose/definition/: network.yaml  volume.yaml
docker-compose/file/nginx/: nginx.conf
docker-compose/file/prometheus/: prometheus.yaml
docker-compose/infra/: docker-prometheus.yaml  grafana.yaml  promtail.yaml
docker-compose/service/: nginx.yaml  redis.yaml
docker/definition/: network.yaml  secret.yaml  volume.yaml
docker/file/grafana/: grafana.ini
docker/file/nginx/: nginx.conf
docker/file/prometheus/: prometheus.yaml
docker/image/: fluentd.dockerfile
docker/include/: application_image.yaml  logger.yaml
docker/infra/: docker-prometheus.yaml  fluentd.yaml  grafana.yaml  loki.yaml  promtail.yaml
docker/service/: nginx.yaml  postgresql.yaml  redis.yaml
encrypted/config/: .env  config.yaml
encrypted/template/dotenv/: docker_compose.env  mudev_backend.env
encrypted/template/secret/: secret.yaml
encrypted/template/service/: backend.$color.yaml  jupyterlab.yaml  node_exporter.yaml  ssh_vultr_tunnel.yaml
infralib/: setup.py
infralib/struct/: config.py  launchd_plist.py
server/cloudflare/: accounts.tf  main.tf
server/cloudflare/domains/: definitions.tf
server/mudev-aws-1/infrastructures/: kms.tf  main.tf  variables.tf
server/mudev-aws-1/terraform/: main.tf  networks.tf  variables.tf
(+42 files in other folders)
