[tool.poetry]
name = "infra-tools"
version = "0.1.0"
description = ""
authors = ["MU-Software <musoftware@mudev.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.8"
infralib = {path = "infralib", develop = true}
pydantic = "^2.6.1"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.3"
setuptools = "^68.2.2"
typer = "^0.9.0"
fabric = "^3.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
